@@ -44,6 +44,9 @@ Section "-un.gnupg"
   Delete "$INSTDIR\share\gnupg\options.skel"
   Delete "$INSTDIR\share\gnupg\FAQ"
   Delete "$INSTDIR\share\gnupg\faq.html"
+  Delete "$INSTDIR\share\gnupg\gpg.man"
+  Delete "$INSTDIR\share\gnupg\gpgv.man"
+  Delete "$INSTDIR\share\gnupg\gnupg.man"
   RMDir "$INSTDIR\share\gnupg"
   RMDir "$INSTDIR\share"
   RMDir "$INSTDIR"
